[package]
name = "log-pattern-viewer"
version = "0.1.0"
authors = ["lichuan.shang@gmail.com"]
edition = "2018"

[dependencies]
crossterm = { version = "0.23.1", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
chrono = { version = "0.4.19", features = ["serde"] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
tui = { version = "0.17.0", default-features = false, features = [
  'crossterm',
  'serde',
] }
thiserror = "1.0.30"
clap = { version = "3.1.6", features = ["derive"] }
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
rusoto_credential = "0.47.0"
anyhow = "1.0.56"
tokio = { version = "1.17.0", features = ["full"] }
